--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kalkuladora</title>
     <link rel="icon" href="AMOGUS.png">
     <link rel="stylesheet" href="kalculadora.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0">
     <script>
         function comprobar(f) {
             var n1 = parseInt(f.numero1.value)
